generated/DaoParser.py
# Generated from DaoParser.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DaoParser ( Parser ):

    grammarFileName = "DaoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\u5BFC\u5165'", "'\u51FD\u6570'", "'\u7C7B'", 
                     "'\u7ED3\u6784\u4F53'", "'\u5171\u7528\u4F53'", "'\u679A\u4E3E'", 
                     "'\u5982\u679C'", "'\u6216\u8005'", "'\u5426\u5219'", 
                     "'\u5F53'", "'\u5BF9\u4E8E'", "'\u8FD4\u56DE'", "'\u8DF3\u8FC7'", 
                     "'\u8DF3\u51FA'", "'\u8DF3\u5230'", "'\u5B57\u8282'", 
                     "'\u77ED\u6574\u6570'", "'\u6574\u6570'", "'\u957F\u6574\u6570'", 
                     "'\u77ED\u6B63\u6574\u6570'", "'\u6B63\u6574\u6570'", 
                     "'\u957F\u6B63\u6574\u6570'", "'\u77ED\u5C0F\u6570'", 
                     "'\u5C0F\u6570'", "'\u957F\u5C0F\u6570'", "'\u903B\u8F91'", 
                     "'\u6587\u672C'", "'\u5B57\u7B26'", "'\u771F'", "'\u5047'", 
                     "'\u7A7A'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", 
                     "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", 
                     "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", 
                     "':'", "'::'", "';'", "','", "'='", "'*='", "'/='", 
                     "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", 
                     "'|='", "'=='", "'!='", "'->'", "'.'", "'...'" ]

    symbolicNames = [ "<INVALID>", "Import", "Func", "Class", "Struct", 
                      "Union", "Enum", "If", "ElseIf", "Else", "While", 
                      "For", "Return", "Continue", "Break", "Goto", "Byte", 
                      "Int16", "Int32", "Int64", "UInt16", "UInt32", "UInt64", 
                      "Half", "Float", "Double", "Bool", "Text", "Char", 
                      "TrueLiteral", "FalseLiteral", "NullLiteral", "LeftParen", 
                      "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
                      "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
                      "LeftShift", "RightShift", "Plus", "PlusPlus", "Minus", 
                      "MinusMinus", "Star", "Div", "Mod", "And", "Or", "AndAnd", 
                      "OrOr", "Caret", "Not", "Tilde", "Question", "Colon", 
                      "ColonColon", "Semi", "Comma", "Assign", "StarAssign", 
                      "DivAssign", "ModAssign", "PlusAssign", "MinusAssign", 
                      "LeftShiftAssign", "RightShiftAssign", "AndAssign", 
                      "XorAssign", "OrAssign", "Equal", "NotEqual", "Arrow", 
                      "Dot", "Ellipsis", "Whitespace", "Newline", "BlockComment", 
                      "LineComment", "IntegerLiteral", "FloatLiteral", "StringLiteral", 
                      "Identifier" ]

    RULE_fileInput = 0
    RULE_statement = 1
    RULE_varDeclaration = 2
    RULE_varDeclarationSpecifier = 3
    RULE_expression = 4
    RULE_assignmentExpression = 5
    RULE_assignmentOperator = 6
    RULE_conditionalExpression = 7
    RULE_logicalOrExpression = 8
    RULE_logicalAndExprression = 9
    RULE_inclusiveOrExprression = 10
    RULE_exclusiveOrExprression = 11
    RULE_andExprression = 12
    RULE_relationalExprression = 13
    RULE_relationalOperator = 14
    RULE_shiftExpression = 15
    RULE_additiveExpression = 16
    RULE_multiplicativeExpression = 17
    RULE_castExpression = 18
    RULE_unaryExpression = 19
    RULE_unaryOperator = 20
    RULE_postfixExpression = 21
    RULE_primaryExpression = 22
    RULE_constantExpression = 23
    RULE_argumentExpressionList = 24
    RULE_identifier = 25
    RULE_dotName = 26
    RULE_typeName = 27
    RULE_funcName = 28

    ruleNames =  [ "fileInput", "statement", "varDeclaration", "varDeclarationSpecifier", 
                   "expression", "assignmentExpression", "assignmentOperator", 
                   "conditionalExpression", "logicalOrExpression", "logicalAndExprression", 
                   "inclusiveOrExprression", "exclusiveOrExprression", "andExprression", 
                   "relationalExprression", "relationalOperator", "shiftExpression", 
                   "additiveExpression", "multiplicativeExpression", "castExpression", 
                   "unaryExpression", "unaryOperator", "postfixExpression", 
                   "primaryExpression", "constantExpression", "argumentExpressionList", 
                   "identifier", "dotName", "typeName", "funcName" ]

    EOF = Token.EOF
    Import=1
    Func=2
    Class=3
    Struct=4
    Union=5
    Enum=6
    If=7
    ElseIf=8
    Else=9
    While=10
    For=11
    Return=12
    Continue=13
    Break=14
    Goto=15
    Byte=16
    Int16=17
    Int32=18
    Int64=19
    UInt16=20
    UInt32=21
    UInt64=22
    Half=23
    Float=24
    Double=25
    Bool=26
    Text=27
    Char=28
    TrueLiteral=29
    FalseLiteral=30
    NullLiteral=31
    LeftParen=32
    RightParen=33
    LeftBracket=34
    RightBracket=35
    LeftBrace=36
    RightBrace=37
    Less=38
    LessEqual=39
    Greater=40
    GreaterEqual=41
    LeftShift=42
    RightShift=43
    Plus=44
    PlusPlus=45
    Minus=46
    MinusMinus=47
    Star=48
    Div=49
    Mod=50
    And=51
    Or=52
    AndAnd=53
    OrOr=54
    Caret=55
    Not=56
    Tilde=57
    Question=58
    Colon=59
    ColonColon=60
    Semi=61
    Comma=62
    Assign=63
    StarAssign=64
    DivAssign=65
    ModAssign=66
    PlusAssign=67
    MinusAssign=68
    LeftShiftAssign=69
    RightShiftAssign=70
    AndAssign=71
    XorAssign=72
    OrAssign=73
    Equal=74
    NotEqual=75
    Arrow=76
    Dot=77
    Ellipsis=78
    Whitespace=79
    Newline=80
    BlockComment=81
    LineComment=82
    IntegerLiteral=83
    FloatLiteral=84
    StringLiteral=85
    Identifier=86

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileInputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DaoParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DaoParser.StatementContext)
            else:
                return self.getTypedRuleContext(DaoParser.StatementContext,i)


        def getRuleIndex(self):
            return DaoParser.RULE_fileInput

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileInput" ):
                return visitor.visitFileInput(self)
            else:
                return visitor.visitChildren(self)




    def fileInput(self):

        localctx = DaoParser.FileInputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fileInput)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DaoParser.Byte) | (1 << DaoParser.Int16) | (1 << DaoParser.Int32) | (1 << DaoParser.Int64) | (1 << DaoParser.UInt16) | (1 << DaoParser.UInt32) | (1 << DaoParser.UInt64) | (1 << DaoParser.Half) | (1 << DaoParser.Float) | (1 << DaoParser.Double) | (1 << DaoParser.Bool) | (1 << DaoParser.Text) | (1 << DaoParser.TrueLiteral) | (1 << DaoParser.FalseLiteral) | (1 << DaoParser.NullLiteral) | (1 << DaoParser.LeftParen) | (1 << DaoParser.Plus) | (1 << DaoParser.PlusPlus) | (1 << DaoParser.Minus) | (1 << DaoParser.MinusMinus) | (1 << DaoParser.Star) | (1 << DaoParser.And) | (1 << DaoParser.Not) | (1 << DaoParser.Tilde))) != 0) or ((((_la - 80)) & ~0x3f) == 0 and ((1 << (_la - 80)) & ((1 << (DaoParser.Newline - 80)) | (1 << (DaoParser.IntegerLiteral - 80)) | (1 << (DaoParser.FloatLiteral - 80)) | (1 << (DaoParser.StringLiteral - 80)) | (1 << (DaoParser.Identifier - 80)))) != 0):
                self.state = 58
                self.statement()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(DaoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Newline(self):
            return self.getToken(DaoParser.Newline, 0)

        def expression(self):
            return self.getTypedRuleContext(DaoParser.ExpressionContext,0)


        def varDeclaration(self):
            return self.getTypedRuleContext(DaoParser.VarDeclarationContext,0)


        def getRuleIndex(self):
            return DaoParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DaoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((((_la - 29)) & ~0x3f) == 0 and ((1 << (_la - 29)) & ((1 << (DaoParser.TrueLiteral - 29)) | (1 << (DaoParser.FalseLiteral - 29)) | (1 << (DaoParser.NullLiteral - 29)) | (1 << (DaoParser.LeftParen - 29)) | (1 << (DaoParser.Plus - 29)) | (1 << (DaoParser.PlusPlus - 29)) | (1 << (DaoParser.Minus - 29)) | (1 << (DaoParser.MinusMinus - 29)) | (1 << (DaoParser.Star - 29)) | (1 << (DaoParser.And - 29)) | (1 << (DaoParser.Not - 29)) | (1 << (DaoParser.Tilde - 29)) | (1 << (DaoParser.IntegerLiteral - 29)) | (1 << (DaoParser.FloatLiteral - 29)) | (1 << (DaoParser.StringLiteral - 29)) | (1 << (DaoParser.Identifier - 29)))) != 0):
                    self.state = 66
                    self.expression()


                self.state = 69
                self.match(DaoParser.Newline)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.varDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclarationSpecifier(self):
            return self.getTypedRuleContext(DaoParser.VarDeclarationSpecifierContext,0)


        def Newline(self):
            return self.getToken(DaoParser.Newline, 0)

        def getRuleIndex(self):
            return DaoParser.RULE_varDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = DaoParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.varDeclarationSpecifier(0)
            self.state = 74
            self.match(DaoParser.Newline)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(DaoParser.TypeNameContext,0)


        def identifier(self):
            return self.getTypedRuleContext(DaoParser.IdentifierContext,0)


        def Assign(self):
            return self.getToken(DaoParser.Assign, 0)

        def expression(self):
            return self.getTypedRuleContext(DaoParser.ExpressionContext,0)


        def varDeclarationSpecifier(self):
            return self.getTypedRuleContext(DaoParser.VarDeclarationSpecifierContext,0)


        def Comma(self):
            return self.getToken(DaoParser.Comma, 0)

        def getRuleIndex(self):
            return DaoParser.RULE_varDeclarationSpecifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclarationSpecifier" ):
                return visitor.visitVarDeclarationSpecifier(self)
            else:
                return visitor.visitChildren(self)



    def varDeclarationSpecifier(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DaoParser.VarDeclarationSpecifierContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_varDeclarationSpecifier, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.typeName()
            self.state = 78
            self.identifier()
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 79
                self.match(DaoParser.Assign)
                self.state = 80
                self.expression()


            self._ctx.stop = self._input.LT(-1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DaoParser.VarDeclarationSpecifierContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_varDeclarationSpecifier)
                    self.state = 83
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 84
                    self.match(DaoParser.Comma)
                    self.state = 85
                    self.identifier()
                    self.state = 88
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 86
                        self.match(DaoParser.Assign)
                        self.state = 87
                        self.expression()

             
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self):
            return self.getTypedRuleContext(DaoParser.AssignmentExpressionContext,0)


        def getRuleIndex(self):
            return DaoParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = DaoParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.assignmentExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionalExpression(self):
            return self.getTypedRuleContext(DaoParser.ConditionalExpressionContext,0)


        def unaryExpression(self):
            return self.getTypedRuleContext(DaoParser.UnaryExpressionContext,0)


        def assignmentOperator(self):
            return self.getTypedRuleContext(DaoParser.AssignmentOperatorContext,0)


        def assignmentExpression(self):
            return self.getTypedRuleContext(DaoParser.AssignmentExpressionContext,0)


        def getRuleIndex(self):
            return DaoParser.RULE_assignmentExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentExpression" ):
                return visitor.visitAssignmentExpression(self)
            else:
                return visitor.visitChildren(self)




    def assignmentExpression(self):

        localctx = DaoParser.AssignmentExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignmentExpression)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.conditionalExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.unaryExpression()
                self.state = 99
                self.assignmentOperator()
                self.state = 100
                self.assignmentExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Assign(self):
            return self.getToken(DaoParser.Assign, 0)

        def StarAssign(self):
            return self.getToken(DaoParser.StarAssign, 0)

        def DivAssign(self):
            return self.getToken(DaoParser.DivAssign, 0)

        def ModAssign(self):
            return self.getToken(DaoParser.ModAssign, 0)

        def PlusAssign(self):
            return self.getToken(DaoParser.PlusAssign, 0)

        def MinusAssign(self):
            return self.getToken(DaoParser.MinusAssign, 0)

        def LeftShiftAssign(self):
            return self.getToken(DaoParser.LeftShiftAssign, 0)

        def RightShiftAssign(self):
            return self.getToken(DaoParser.RightShiftAssign, 0)

        def AndAssign(self):
            return self.getToken(DaoParser.AndAssign, 0)

        def XorAssign(self):
            return self.getToken(DaoParser.XorAssign, 0)

        def OrAssign(self):
            return self.getToken(DaoParser.OrAssign, 0)

        def getRuleIndex(self):
            return DaoParser.RULE_assignmentOperator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentOperator" ):
                return visitor.visitAssignmentOperator(self)
            else:
                return visitor.visitChildren(self)




    def assignmentOperator(self):

        localctx = DaoParser.AssignmentOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignmentOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not(((((_la - 63)) & ~0x3f) == 0 and ((1 << (_la - 63)) & ((1 << (DaoParser.Assign - 63)) | (1 << (DaoParser.StarAssign - 63)) | (1 << (DaoParser.DivAssign - 63)) | (1 << (DaoParser.ModAssign - 63)) | (1 << (DaoParser.PlusAssign - 63)) | (1 << (DaoParser.MinusAssign - 63)) | (1 << (DaoParser.LeftShiftAssign - 63)) | (1 << (DaoParser.RightShiftAssign - 63)) | (1 << (DaoParser.AndAssign - 63)) | (1 << (DaoParser.XorAssign - 63)) | (1 << (DaoParser.OrAssign - 63)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOrExpression(self):
            return self.getTypedRuleContext(DaoParser.LogicalOrExpressionContext,0)


        def Question(self):
            return self.getToken(DaoParser.Question, 0)

        def expression(self):
            return self.getTypedRuleContext(DaoParser.ExpressionContext,0)


        def Colon(self):
            return self.getToken(DaoParser.Colon, 0)

        def conditionalExpression(self):
            return self.getTypedRuleContext(DaoParser.ConditionalExpressionContext,0)


        def getRuleIndex(self):
            return DaoParser.RULE_conditionalExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionalExpression" ):
                return visitor.visitConditionalExpression(self)
            else:
                return visitor.visitChildren(self)




    def conditionalExpression(self):

        localctx = DaoParser.ConditionalExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conditionalExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.logicalOrExpression(0)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 107
                self.match(DaoParser.Question)
                self.state = 108
                self.expression()
                self.state = 109
                self.match(DaoParser.Colon)
                self.state = 110
                self.conditionalExpression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAndExprression(self):
            return self.getTypedRuleContext(DaoParser.LogicalAndExprressionContext,0)


        def logicalOrExpression(self):
            return self.getTypedRuleContext(DaoParser.LogicalOrExpressionContext,0)


        def OrOr(self):
            return self.getToken(DaoParser.OrOr, 0)

        def getRuleIndex(self):
            return DaoParser.RULE_logicalOrExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOrExpression" ):
                return visitor.visitLogicalOrExpression(self)
            else:
                return visitor.visitChildren(self)



    def logicalOrExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DaoParser.LogicalOrExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_logicalOrExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.logicalAndExprression(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DaoParser.LogicalOrExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logicalOrExpression)
                    self.state = 117
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 118
                    self.match(DaoParser.OrOr)
                    self.state = 119
                    self.logicalAndExprression(0) 
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LogicalAndExprressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inclusiveOrExprression(self):
            return self.getTypedRuleContext(DaoParser.InclusiveOrExprressionContext,0)


        def logicalAndExprression(self):
            return self.getTypedRuleContext(DaoParser.LogicalAndExprressionContext,0)


        def AndAnd(self):
            return self.getToken(DaoParser.AndAnd, 0)

        def getRuleIndex(self):
            return DaoParser.RULE_logicalAndExprression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalAndExprression" ):
                return visitor.visitLogicalAndExprression(self)
            else:
                return visitor.visitChildren(self)



    def logicalAndExprression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DaoParser.LogicalAndExprressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_logicalAndExprression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.inclusiveOrExprression(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DaoParser.LogicalAndExprressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logicalAndExprression)
                    self.state = 128
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 129
                    self.match(DaoParser.AndAnd)
                    self.state = 130
                    self.inclusiveOrExprression(0) 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class InclusiveOrExprressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exclusiveOrExprression(self):
            return self.getTypedRuleContext(DaoParser.ExclusiveOrExprressionContext,0)


        def inclusiveOrExprression(self):
            return self.getTypedRuleContext(DaoParser.InclusiveOrExprressionContext,0)


        def Or(self):
            return self.getToken(DaoParser.Or, 0)

        def getRuleIndex(self):
            return DaoParser.RULE_inclusiveOrExprression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclusiveOrExprression" ):
                return visitor.visitInclusiveOrExprression(self)
            else:
                return visitor.visitChildren(self)



    def inclusiveOrExprression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DaoParser.InclusiveOrExprressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_inclusiveOrExprression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.exclusiveOrExprression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 144
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DaoParser.InclusiveOrExprressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_inclusiveOrExprression)
                    self.state = 139
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 140
                    self.match(DaoParser.Or)
                    self.state = 141
                    self.exclusiveOrExprression() 
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExclusiveOrExprressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
